Added product price styling for Shopify pages

--- a/css/common.css
+++ b/css/common.css
@@ -80,6 +80,12 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+.product-price {
+    font-weight: 600;
+    display: block;
+    margin-bottom: 4px;
+}
+
 /* Color Scheme */
 
 .text-color-primary,
