Added drop shadow to bottom of jumbotrons on all subpages

--- a/css/common.css
+++ b/css/common.css
@@ -159,6 +159,11 @@ form .form-control:focus,
     box-shadow: 0 4px 50px 0 rgba(0, 0, 0, 0.15);
 }
 
+.subpage-jumbotron + .info,
+.subpage-jumbotron + #contact-form {
+    box-shadow: 0 4px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
 .form-control:focus {
     box-shadow: 0 0 0 0.2rem rgba(130, 130, 130,.25);
 }
