--- a/css/common.css
+++ b/css/common.css
@@ -161,6 +161,7 @@ form .form-control:focus,
 
 .subpage-jumbotron + .info,
 .subpage-jumbotron + #contact-form,
+.subpage-jumbotron + .legal-page,
 .merch-jumbotron + .info {
     box-shadow: 0 4px 50px 0 rgba(0, 0, 0, 0.15);
 }
