--- a/css/common.css
+++ b/css/common.css
@@ -102,12 +102,12 @@ form .form-control:focus,
 
 .button,
 .is-default,
-#footer .social-media a,
+#footer .social-media-icons a,
 .form-control:focus {
     border-color: #828282;
 }
 
-#footer .social-media a:hover,
+#footer .social-media-icons a:hover,
 .button:hover,
 .underline:after {
     background-color: #828282;
@@ -124,13 +124,13 @@ form .form-control:focus,
 }
 
 #footer .input button:active,
-#footer .social-media a:active,
+#footer .social-media-icons a:active,
 .button:active:not(.disabled) {
     border-color: #676767;
 }
 
 #footer .input button:active,
-#footer .social-media a:active,
+#footer .social-media-icons a:active,
 .button:active:not(.disabled),
 .underline:active:after {
     background-color: #676767;
@@ -142,8 +142,8 @@ form .form-control:focus,
 }
 
 #footer .input button:active,
-#footer .social-media a:hover > i,
-#footer .social-media a:active,
+#footer .social-media-icons a:hover > i,
+#footer .social-media-icons a:active,
 .button:hover,
 .button:active {
     color: white;
@@ -711,13 +711,9 @@ ul.product-info-list li {
     font-size: 24px;
 }
 
-#footer .links div:first-child {
-    margin-right: 90px;
-}
-
-#footer .links,
-#footer form {
-    height: 63px;
+#footer .links .row {
+    flex-direction: column;
+    margin: 0;
 }
 
 #footer .input {
@@ -750,12 +746,19 @@ ul.product-info-list li {
     text-decoration: none;
 }
 
-#footer .social-media {
-    display: flex;
-    align-items: center;
+#footer .social-media-icons {
+    margin: 8px 0 0 0;
 }
 
-#footer .social-media a {
+#footer .email {
+    margin: 16px 0 0 0;
+}
+
+#footer .social-media-icons {
+    justify-content: flex-end;
+}
+
+#footer .social-media-icons a {
     border-width: 2px;
     border-style: solid;
     border-radius: 50%;
@@ -765,72 +768,124 @@ ul.product-info-list li {
     padding: 2px 0;
 }
 
-#footer .social-media a,
-#footer .social-media a i {
+#footer .social-media-icons a,
+#footer .social-media-icons a i {
     transition: 0.3s all;
 }
 
-#footer .social-media a:not(:last-child) {
+#footer .social-media-icons a:not(:last-child) {
     margin-right: 40px;
 }
 
-#footer .social-media a:hover{
+#footer .social-media-icons a:hover{
     text-decoration: none;
 }
 
-#footer .social-media a:active{
+#footer ..social-media-icons a:active{
     text-decoration: none;
 }
 
-
-
-@media (min-width: 768px) and (max-width: 991px) {
-    #footer .links div:first-child,
-    #footer .social-media a:not(:last-child) {
-        margin-right: 30px;
+@media (min-width: 1200px) {
+    #footer .links .row:first-child {
+        margin-right: 32px;
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) and (max-width: 1199px) {
+    #footer .links .row:first-child {
+        margin-right: 16px;
+    }
+
+    .input-group {
+        width: 95%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 992px) {
     #footer form {
         position: absolute;
-        top: 50%;
+        top: 38px;
         left: 50%;
-        -webkit-transform: translate(-50%,-50%);
-        transform: translate(-50%,-50%);
+        -webkit-transform: translate(-50%, 0);
+        transform: translate(-50%, 0);
     }
+
     #footer > .container {
         display: flex;
         justify-content: space-between;
+        align-items: flex-start;
     }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
     #footer > .container {
         display: flex;
         flex-direction: column;
     }
+
     #footer form {
         order: -1;
     }
+
     #footer .input-group {
         margin: 0 auto;
         max-width: 300px;
     }
+
     #footer .links,
     #footer .social-media {
         justify-content: center;
     }
-    #footer .links {
-        margin-bottom: 8px;
+
+    #footer .links .row {
+        text-align: center;
     }
-    #footer .links div:first-child {
-        margin-right: 40px;
+
+    #footer .social-media > div {
+        justify-content: center;
+    }
+}
+
+@media (min-width: 500px) and (max-width: 991px) {
+    #footer .links {
+        display: block;
+        margin: 8px -15px;
+    }
+
+    #footer .links .row {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 499px) {
+    #footer .links,
+    #footer .social-media {
+        justify-content: center;
+    }
+
+    #footer .links {
+        margin: 16px 0;
+    }
+
+    #footer .links .row:first-child {
+        margin-right: 32px;
     }
 }
 
 @media (max-width: 398px) {
+    #footer .description {
+        font-size: 16px;
+    }
+
     #footer .caption {
         font-size: 10px;
+    }
+}
+
+@media (max-width: 305px) {
+    #footer .links .row:first-child {
+        margin-right: 16px;
     }
 }
