Refactored all pages to remove Bootstrap dependencies

--- a/css/about.css
+++ b/css/about.css
@@ -1,15 +1,5 @@
-:root {
-    --navbar-height: 92px;
-}
-
 .button {
-        width: 193px;
-}
-
-@media (max-width: 992px) and (min-width: 768px) {
-    .button {
-        width: 165px;
-    }
+    display: inline-block;
 }
 
 /* Section Banner section */
@@ -22,14 +12,14 @@
 
 /* Photo Highlights section */
 
-#photo-highlights .col:nth-child(1) {
+#photo-highlights-v2 .image:nth-child(1) {
     background-image: url("../images/photo-highlight-4.jpg");
 }
 
-#photo-highlights .col:nth-child(2) {
+#photo-highlights-v2 .image:nth-child(2) {
     background-image: url("../images/photo-highlight-5.jpg");
 }
 
-#photo-highlights .col:nth-child(3) {
+#photo-highlights-v2 .image:nth-child(3) {
     background-image: url("../images/photo-highlight-6.jpg");
 }
