--- a/css/careers.css
+++ b/css/careers.css
@@ -31,12 +31,16 @@
 #careers form {
     max-width: 350px;
     margin: 24px auto 0 auto;
+    display: flex;
 }
 
 #careers form input {
     border-width: 2px 0 2px 2px;
     border-style: solid;
     background-color: #ffffff;
+    border-radius: 4px 0 0 4px;
+    padding: 6px 12px;
+    flex-grow: 1;
 }
 
 #careers form input:focus {
@@ -44,21 +48,49 @@
 }
 
 #careers form button {
-    border-width: 2px;
+    border: 2px solid #6c757d;
     font-size: 14px;
+    line-height: 1.5;
+    border-radius: 0 4px 4px 0;
+    padding: 6px 12px;
+    color: #6c757d;
+    background-color: #ffffff;
+    cursor: pointer;
+    margin-left: -1px;
+}
+
+#careers form button:hover {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+#careers form input,
+#careers form button {
+    transition:
+        color 0.15s ease-in-out,
+        background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out,
+        box-shadow 0.15s ease-in-out;
+}
+
+#careers form input:focus,
+#careers form button:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgb(130 130 130 / 25%);
 }
 
 /* Photo Highlights section */
 
-#photo-highlights .col:nth-child(1) {
+#photo-highlights-v2 .image:nth-child(1) {
     background-image: url("../images/photo-highlight-3.jpg");
 }
 
-#photo-highlights .col:nth-child(2) {
+#photo-highlights-v2 .image:nth-child(2) {
     background-image: url("../images/photo-highlight-5.jpg");
 }
 
-#photo-highlights .col:nth-child(3) {
+#photo-highlights-v2 .image:nth-child(3) {
     background-image: url("../images/photo-highlight-7.jpg");
     background-position: right center;
 }
