--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,7 @@
 body {
     -webkit-font-smoothing: auto;
+    padding: 0;
+    margin: 0;
 }
 
 .clear {
@@ -150,10 +152,12 @@ form .form-control:focus,
 }
 
 #navbar,
+#navbar-v2,
 .info .content > div,
 .section-banner,
 #contact-form .inner,
-#footer {
+#footer,
+#footer-v2 {
     z-index: 10;
     position: relative;
     box-shadow: 0 4px 50px 0 rgba(0, 0, 0, 0.15);
@@ -212,7 +216,7 @@ form .form-control:focus,
     );
 
     background-size: 100vw;
-    transition: 0.3s all;
+    /* transition: 0.3s all; */ /* turning this off since the gradient animation is off too */
 
 /*    -webkit-animation: gradient-animation 10s ease infinite;
     -moz-animation: gradient-animation 10s ease infinite;
